<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paulchidi.eaglesconnect.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="#39053a">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_username"
        android:hint="@string/hint_username"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="#8a8584"
        android:textColor="#8a8584" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_password"
        android:layout_below="@+id/editText_username"
        android:layout_alignParentLeft="true"
        android:textColorHint="#8a8584"
        android:textColor="#8a8584" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        android:id="@+id/button_login"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_password"
        android:layout_alignParentLeft="true"
        android:background="#00C256" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_signup"
        android:id="@+id/textView_signup_link"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="38dp"
        android:layout_centerInParent="true"

        android:textColor="#00C256" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView_logo"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo"
        android:layout_marginTop="67dp"
        android:layout_centerInParent="true" />
</RelativeLayout>
