<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paulchidi.eaglesconnect.SignUpActivity"
    tools:showIn="@layout/activity_sign_up"
    android:background="#39053a">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_username"
        android:layout_marginTop="71dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:textColorHint="#8a8584"
        android:textColor="#8a8584" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_email"
        android:layout_below="@+id/editText_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:hint="@string/txt_hint_email"
        android:textColor="#8a8584"
        android:textColorHint="#8a8584" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:hint="@string/hint_password"
        android:layout_below="@id/editText_email"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="#8a8584"
        android:textColor="#8a8584" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_signup"
        android:id="@+id/button_signUp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#00C256" />

   <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_phone"
        android:layout_below="@+id/editText_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColorHint="#8a8584"
        android:textColor="#8a8584"
        android:hint="Phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_birthday"
        android:layout_below="@+id/editText_phone"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="#8a8584"
        android:textColor="#8a8584"

        android:hint="Date of birth" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_gradyear"
        android:layout_below="@+id/editText_birthday"
        android:layout_marginTop="30dp"
        android:textColorHint="#8a8584"
        android:textColor="#8a8584"
        android:layout_centerHorizontal="true"
        android:hint="Graduation Year"/>

    <!--<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_program"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText_gradyear"
        android:layout_centerHorizontal="true"
        android:hint="Program" />-->

</RelativeLayout>
